log
Wed 20 Mar 2024 08:08:20 PM UTC: 
 tests:  0|5
total_score: 0/70
25cdfdf
Wed 20 Mar 2024 08:13:35 PM UTC: 
 exercises.c | 30 ++++++++++++++----------------
 1 file changed, 14 insertions(+), 16 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:5: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   48 |     push_back(L, dato);
      |     ^~~~~~~~~
      |     pushBack
cc1: all warnings being treated as errors
Compilation failed
5254bba
Wed 20 Mar 2024 08:14:30 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:10: error: unused variable ‘dato’ [-Werror=unused-variable]
   46 |     int *dato = (int *)malloc(sizeof(int));
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
d665be0
Wed 20 Mar 2024 08:14:40 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:16: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   46 |     int dato = (int *)malloc(sizeof(int));
      |                ^
exercises.c:46:9: error: unused variable ‘dato’ [-Werror=unused-variable]
   46 |     int dato = (int *)malloc(sizeof(int));
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
be239ea
Wed 20 Mar 2024 08:15:20 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
a378b36
Wed 20 Mar 2024 08:15:40 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:5: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   48 |     push_back(L, dato);
      |     ^~~~~~~~~
      |     pushBack
cc1: all warnings being treated as errors
Compilation failed
234d373
Wed 20 Mar 2024 08:16:58 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:5: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   48 |     push_back(L, dato);
      |     ^~~~~~~~~
      |     pushBack
cc1: all warnings being treated as errors
Compilation failed
adddf5a
Wed 20 Mar 2024 08:17:26 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:5: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   48 |     push_back(L, dato);
      |     ^~~~~~~~~
      |     pushBack
cc1: all warnings being treated as errors
Compilation failed
5b61668
Wed 20 Mar 2024 08:18:08 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:5: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   48 |     push_back(L, *dato);
      |     ^~~~~~~~~
      |     pushBack
cc1: all warnings being treated as errors
Compilation failed
2574c23
Wed 20 Mar 2024 08:18:38 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:5: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   48 |     push_back(L, dato);
      |     ^~~~~~~~~
      |     pushBack
cc1: all warnings being treated as errors
Compilation failed
667a425
Wed 20 Mar 2024 08:19:01 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
2358c1a
Wed 20 Mar 2024 08:24:31 PM UTC: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
e259f73
Wed 20 Mar 2024 08:24:48 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:72:10: error: returning ‘int *’ from a function with return type ‘int’ makes integer from pointer without a cast [-Werror=int-conversion]
   72 |   return enteros; }
      |          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0b64f36
Wed 20 Mar 2024 08:24:56 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4f621e6
Wed 20 Mar 2024 08:25:09 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:72:10: error: ‘suma’ undeclared (first use in this function); did you mean ‘sum’?
   72 |   return suma; }
      |          ^~~~
      |          sum
exercises.c:72:10: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:72:16: error: control reaches end of non-void function [-Werror=return-type]
   72 |   return suma; }
      |                ^
cc1: all warnings being treated as errors
Compilation failed
536338f
Wed 20 Mar 2024 08:25:12 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
ea84db3
Wed 20 Mar 2024 08:27:23 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:88:9: error: too few arguments to function ‘eliminaElementos’
   88 |         eliminaElementos(L);
      |         ^~~~~~~~~~~~~~~~
exercises.c:83:6: note: declared here
   83 | void eliminaElementos(List *L, int elem) {
      |      ^~~~~~~~~~~~~~~~
Compilation failed
67670bf
Wed 20 Mar 2024 08:27:39 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:88:28: error: passing argument 2 of ‘eliminaElementos’ makes integer from pointer without a cast [-Werror=int-conversion]
   88 |         eliminaElementos(L,ent);
      |                            ^~~
      |                            |
      |                            int *
exercises.c:83:36: note: expected ‘int’ but argument is of type ‘int *’
   83 | void eliminaElementos(List *L, int elem) {
      |                                ~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
8d51662
Wed 20 Mar 2024 08:28:23 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:88:25: error: passing argument 2 of ‘pushCurrent’ makes pointer from integer without a cast [-Werror=int-conversion]
   88 |           pushCurrent(L,elem);
      |                         ^~~~
      |                         |
      |                         int
In file included from exercises.c:1,
                 from test.c:5:
arraylist.h:23:33: note: expected ‘void *’ but argument is of type ‘int’
   23 | void pushCurrent(List *L, void *dato);
      |                           ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
cc00844
Wed 20 Mar 2024 08:28:28 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:88:11: error: too few arguments to function ‘pushCurrent’
   88 |           pushCurrent(L);
      |           ^~~~~~~~~~~
In file included from exercises.c:1,
                 from test.c:5:
arraylist.h:23:6: note: declared here
   23 | void pushCurrent(List *L, void *dato);
      |      ^~~~~~~~~~~
Compilation failed
f2b3455
Wed 20 Mar 2024 08:29:18 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:88:7: error: too many arguments to function ‘popCurrent’
   88 |       popCurrent(L,elem);
      |       ^~~~~~~~~~
In file included from exercises.c:1,
                 from test.c:5:
arraylist.h:32:7: note: declared here
   32 | void *popCurrent(List *L);
      |       ^~~~~~~~~~
Compilation failed
6526aab
Wed 20 Mar 2024 08:29:29 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:88:7: error: too many arguments to function ‘popCurrent’
   88 |       popCurrent(L,*ent);
      |       ^~~~~~~~~~
In file included from exercises.c:1,
                 from test.c:5:
arraylist.h:32:7: note: declared here
   32 | void *popCurrent(List *L);
      |       ^~~~~~~~~~
Compilation failed
e81a642
